--- a/Widget.html
+++ b/Widget.html
@@ -1,6 +1,7 @@
 <div style="width:100%; height:100%; min-width:280px;min-width:240px;">
     <!--<div class="widgetActive widgetIndicator" id="widgetActiveIndicator" data-dojo-attach-point="widgetActiveIndicator"></div>-->
-    <button id="buttonBack2" type="button"></button><br>&nbsp; <!--MJM fo back button-->
+    <button id="buttonBack2" type="button"></button><br>&nbsp;
+    <!--MJM fo back button-->
     <div class="templatePickerMainDiv">
 
         <div id="templatePickerDiv" class="templatePickerDiv" data-dojo-attach-point="templatePickerDiv">
@@ -17,15 +18,16 @@
 
         <div class="autoSaveOptionDiv">
             <div>
-                <input id="autoSaveSwitch" data-dojo-type="dijit/form/CheckBox" data-dojo-attach-event="change:_toggleRunTimeAutoSave" checked="true"
-                />
+                <input id="autoSaveSwitch" data-dojo-type="dijit/form/CheckBox"
+                    data-dojo-attach-event="change:_toggleRunTimeAutoSave" checked="true" />
                 <label id="lblAutoSave" for="autoSaveSwitch">${nls.autoSaveEdits}</label>
             </div>
         </div>
         <div id="presetFieldsTableDiv" class="presetFieldsTableDiv" data-dojo-attach-point="presetFieldsTableDiv">
             <div class=" spacer"></div>
             <div>
-                <input id="savePresetValueSwitch" data-dojo-type="dijit/form/CheckBox" data-dojo-attach-event="change:_setPresetValue" />
+                <input id="savePresetValueSwitch" data-dojo-type="dijit/form/CheckBox"
+                    data-dojo-attach-event="change:_setPresetValue" />
                 <label for="savePresetValueSwitch">${nls.usePresetValues}</label>
             </div>
             <div class="spacer"></div>
@@ -39,5 +41,6 @@
             <div data-dojo-attach-point="cancelButton" class="cancelButton jimu-btn">${nls.back}</div>
         </div>
         <div data-dojo-attach-point="mainContainer" style="max-height : calc(100% - 65px); overflow:auto;"></div>
-        <div data-dojo-attach-point="shelter" data-dojo-type="jimu/dijit/LoadingShelter" data-dojo-props='hidden:true'></div>
+        <div data-dojo-attach-point="shelter" data-dojo-type="jimu/dijit/LoadingShelter" data-dojo-props='hidden:true'>
+        </div>
     </div>
